--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
   <h1>กรุณาเลือกชุดข้อสอบอนุกรม </h1>
   <div class="container">
     <h2 class="head">ข้อสอบอนุกรมมิติ</h2>
-    <img class="images" src="../image/test.jpg" alt="">
+    <img class="images" src="image/test.jpg" alt="">
 
     <button=- class="button-1" role="button"><a href="ses1.html">ชุดที่1</a></button>
   </div>
@@ -21,14 +21,14 @@
 
   <div class="container">
     <h2 class="head">ข้อสอบอนุกรมมิติ</h2>
-    <img class="images" src="../image/test.jpg" alt="">
+    <img class="images" src="image/test.jpg" alt="">
 
     <button=- class="button-1" role="button"><a href="ses2.html">ชุดที่2</a></button>
   </div>
 
   <div class="container">
     <h2 class="head">ข้อสอบอนุกรมมิติ</h2>
-    <img class="images" src="../image/test.jpg" alt="">
+    <img class="images" src="image/test.jpg" alt="">
 
     <button=- class="button-1" role="button"><a href="ses3.html">ชุดที่3</a></button>
   </div>
